add a request for order & update openapi.json
